speculaas/ingress-spike/externalDNS.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: external-dns
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      containers:
      - name: external-dns
        image: registry.opensource.zalan.do/teapot/external-dns:v0.4.8
        args:
        - --source=ingress
        - --domain-filter=houseofmoran.io
        - --provider=aws
        - --registry=txt
        - --txt-owner-id=external-dns-ingress-spike
        - --log-level=debug
