speculaas/ingress-spike/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ingress-spike-echoserver.houseofmoran.io
    http:
      paths:
      - backend:
          serviceName: echoserver
          servicePort: 80
